Fixed 'No server info found' error at startup Got more tests passing